--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container mt-3">
 <h1>
   List of all movies
 </h1>
@@ -9,57 +10,8 @@
 </div>
 
 <hr>
-
-<table>
-  <tr>
-    <th>
-      ID
-    </th>
-
-    <th>
-      Title
-    </th>
-
-    <th>
-      Description
-    </th>
-
-    <th>
-      Created at
-    </th>
-
-    <th>
-      Updated at
-    </th>
-
-    <th>
-    </th>
-  </tr>
-
-  <% @movies.each do |movie| %>
-  <tr>
-    <td>
-      <%= movie.id %>
-    </td>
-
-    <td>
-      <%= movie.title %>
-    </td>
-
-    <td>
-      <%= movie.description %>
-    </td>
-
-    <td>
-      <%= time_ago_in_words(movie.created_at) %> ago
-    </td>
-    <td>
-      <%= time_ago_in_words(movie.updated_at) %> ago
-    </td>
-
-    <td>
-      <%= link_to "Show details", movie %>
-    </td>
-  </tr>
-  <% end %>
-</table>
+<div class="row">
+<% @movies.each do |movie| %>
+  <%= render partial: "movies/movie_card", locals: { baz: movie } %>
+<% end %>
+</div>
