--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,51 +1,1 @@
-<div>
-  <div>
-    <h1>
-      Movie #<%= @movie.id %> details
-    </h1>
-
-    <div>
-      <div>
-        <%= link_to "Go back", movies_path %>
-      </div>
-
-      <div>
-        <%= link_to "Edit Movie", edit_movie_path(@movie) %>
-      </div>
-
-      <div>
-        <%= link_to "Delete Movie", @movie, method: :delete %>
-      </div>
-    </div>
-
-    <dl>
-      <dt>
-        Title
-      </dt>
-      <dd>
-        <%= @movie.title %>
-      </dd>
-
-      <dt>
-        Description
-      </dt>
-      <dd>
-        <%= @movie.description %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@movie.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@movie.updated_at) %> ago
-      </dd>
-    </dl>
-  </div>
-</div>
+  <%= render partial: "movies/movie_card", locals: { baz: @movie } %>
